# flux-lang

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .lintstagedrc.json  .output.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_REPORT.md  README.dev.md  README.md  ROADMAP.md  SECURITY.md  build_errors.txt  build_log.txt  build_output.txt  cpp.tmLanguage.json  dark-modern-theme.json  output.txt  package-manager.md  package.json  setup_output.txt  test_output.txt  test_type.cpp  tsconfig.json
.agent/rules/: bidirectional-sync.md  code-quality.md  conventional-commits.md  documentation-and-tracking.md  extension-sync.md  general-workflow.md  implementation-rules.md  professional-standard.md  research-and-external-information.md  self-asking-questions.md
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml  deploy-docs.yml  msvc.yml  version.yml
.husky/: pre-push
docs/: RELEASE_PROCESS.md  SELF_HOSTING_ROADMAP.md  index.md  reference_types.md  team.md
docs/.vitepress/: config.mts  flux.tmLanguage.json
docs/.vitepress/theme/: custom.css  index.ts
docs/examples/: hello-world.md  index.md  ownership.md  shapes.md
docs/guide/: async.md  control-flow.md  error-handling.md  functions.md  hello-world.md  index.md  installation.md  ownership.md  pattern-matching.md  structs-enums.md  traits.md  variables.md
docs/reference/: index.md  keywords.md  operators.md  types.md
editors/vscode/: .vscodeignore  LICENSE  README.md  flux-lang-0.1.0.vsix  language-configuration.json  package.json
editors/vscode/snippets/: flux.json
editors/vscode/syntaxes/: flux.tmLanguage.json
examples/: comprehensive.fl  control_flow.fl  ffi_test.fl  full_test.fl  generics.fl  hello.fl  match.fl  minimal_codegen.fl  more.fl  ownership.fl  quick-example.fl  structs.fl  test.fl  types_test.fl
src/: main.cpp
src/ast/: ast.h  ast_printer.cpp  ast_printer.h
src/codegen/: codegen.cpp  codegen.h  type_converter.cpp  type_converter.h
src/driver/: module_loader.cpp  module_loader.h
src/ir/: ir.h  ir_builder.cpp  ir_builder.h  ir_lowering.cpp  ir_lowering.h  ir_pass.h  ir_printer.cpp  ir_printer.h
src/ir/passes/: constant_folding.cpp  constant_folding.h  dead_code_elimination.cpp  dead_code_elimination.h  inliner.cpp  inliner.h  ir_verifier.cpp  ir_verifier.h
src/lexer/: diagnostic.h  lexer.cpp  lexer.h  token.h
src/parser/: parser.cpp  parser.h
src/semantic/: monomorphizer.cpp  monomorphizer.h  resolver.cpp  resolver.h  scope.h  symbol.h  type.h
std/: io.fl
tests/: array_slice.cpp  associated_types.cpp  codegen_basic.cpp  concurrency.cpp  control_flow.cpp  error_handling.cpp  generic_method.cpp  generic_method_fail.cpp  hardening_phase1.cpp  index_slice.cpp  ir_basic.cpp  lambda_parse.cpp  monomorphization.cpp  move_semantics.cpp  never_propagation.cpp  numeric_promotion.cpp  option_result.cpp  orphan_rule.cpp  ownership_borrowing.cpp  pattern_matching.cpp  reference.cpp  struct_field.cpp  trait_bound.cpp  trait_conformance.cpp  trait_default_generic.cpp  trait_default_methods.cpp  trait_dispatch.cpp  tuple.cpp  type_alias.cpp  visibility.cpp  where_clause.cpp
tests/type_checker/: function_types.fl  never_type.fl  option_result.fl  option_result_error.fl
